SampleCode/SUSIDemo_C/Susi4.h


typedef uint32_t SusiStatus_t;
typedef uint32_t SusiId_t;
SusiStatus_t SUSI_API SusiBoardWriteIO(
	uint16_t Port,		
	uint32_t Value,		
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiBoardReadPCI(
	uint8_t Bus,		
	uint8_t Device,		
	uint8_t Function,	
	uint32_t Offset,	
	uint8_t *pData,		
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiBoardWritePCI(
	uint8_t Bus,		
	uint8_t Device,		
	uint8_t Function,	
	uint32_t Offset,	
	uint8_t *pData,		
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiBoardReadMemory(
	uint32_t Address,	
	uint8_t *pData,		
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiBoardWriteMemory(
	uint32_t Address,	
	uint8_t *pData,		
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiBoardReadMSR(
	uint32_t index,		
	uint32_t *EAX_reg,	
	uint32_t *EDX_reg	
	);
SusiStatus_t SUSI_API SusiBoardWriteMSR(
	uint32_t index,	
	uint32_t EAX_reg,	
	uint32_t EDX_reg	
	);
#define SUSI_SMBUS_MAX_DEVICE			5
#define SUSI_ID_SMBUS_EXTERNAL			((SusiId_t)0)	
#define SUSI_ID_SMBUS_OEM0				((SusiId_t)1)
#define SUSI_ID_SMBUS_OEM1				((SusiId_t)2)
#define SUSI_ID_SMBUS_OEM2				((SusiId_t)3)
#define SUSI_ID_SMBUS_OEM3				((SusiId_t)4)
SusiStatus_t SUSI_API SusiSMBReadByte(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t *pBuffer	
	);
SusiStatus_t SUSI_API SusiSMBWriteByte(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t Data		
	);
SusiStatus_t SUSI_API SusiSMBReadWord(
	SusiId_t Id,			
	uint8_t Addr,			
	uint8_t Cmd,			
	uint16_t *pBuffer		
	);
SusiStatus_t SUSI_API SusiSMBWriteWord(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint16_t Data		
	);
SusiStatus_t SUSI_API SusiSMBReceiveByte(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t *pData		
	);
SusiStatus_t SUSI_API SusiSMBSendByte(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Data		
	);
SusiStatus_t SUSI_API SusiSMBReadQuick(
	SusiId_t Id,		
	uint8_t Addr		
	);
SusiStatus_t SUSI_API SusiSMBWriteQuick(
	SusiId_t Id,		
	uint8_t Addr		
	);
SusiStatus_t SUSI_API SusiSMBReadBlock(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t *pBuffer,	
	uint32_t *pLength	
	);
SusiStatus_t SUSI_API SusiSMBWriteBlock(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t *pBuffer,	
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiSMBI2CReadBlock(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t *pBuffer,	
	uint32_t Length		
	);
SusiStatus_t SUSI_API SusiSMBI2CWriteBlock(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t Cmd,		
	uint8_t *pBuffer,	
	uint32_t Length		
	);
#define SUSI_I2C_MAX_DEVICE			7
#define SUSI_ID_I2C_EXTERNAL		((SusiId_t)0)		
#define SUSI_ID_I2C_OEM0			((SusiId_t)1)
#define SUSI_ID_I2C_OEM1			((SusiId_t)2)
#define SUSI_ID_I2C_OEM2			((SusiId_t)3)
#define SUSI_ID_I2C_OEM3			((SusiId_t)4)
#define SUSI_I2C_ENC_7BIT_ADDR(x)		(((x) & 0x07F) << 1)
#define SUSI_I2C_DEC_7BIT_ADDR(x)		(((x) >> 1) & 0x07F)
#define SUSI_I2C_ENC_10BIT_ADDR(x)		(((x) & 0xFF) | (((x) & 0x0300) << 1) | 0xF000)
#define SUSI_I2C_DEC_10BIT_ADDR(x)		(((x) & 0xFF) | (((x) >> 1) & 0x300))
#define SUSI_I2C_IS_10BIT_ADDR(x)		(((x) & 0xF800) == 0xF000)
#define SUSI_I2C_IS_7BIT_ADDR(x)		(!SUSI_I2C_IS_10BIT_ADDR(x))
SusiStatus_t SUSI_API SusiI2CWriteReadCombine(
	SusiId_t Id,		
	uint8_t Addr,		
	uint8_t *pWBuffer,	
	uint32_t WriteLen,	
	uint8_t *pRBuffer,	
	uint32_t ReadLen	
    );
#define SUSI_I2C_STD_CMD				(uint32_t)(0 << 30)
#define SUSI_I2C_EXT_CMD				(uint32_t)(2 << 30)
#define SUSI_I2C_NO_CMD					(uint32_t)(1 << 30)    
#define SUSI_I2C_CMD_TYPE_MASK			(uint32_t)(3 << 30)    
#define SUSI_I2C_ENC_STD_CMD(x)			(((x) & 0xFF) | SUSI_I2C_STD_CMD)
#define SUSI_I2C_ENC_EXT_CMD(x)			(((x) & 0xFFFF) | SUSI_I2C_EXT_CMD)
#define SUSI_I2C_ENC_NO_CMD(x)			((x) | SUSI_I2C_NO_CMD)
#define SUSI_I2C_IS_EXT_CMD(x)			(((x) & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_EXT_CMD)
#define SUSI_I2C_IS_STD_CMD(x)			(((x) & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_STD_CMD)
#define SUSI_I2C_IS_NO_CMD(x)			(((x) & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_NO_CMD)
SusiStatus_t SUSI_API SusiI2CReadTransfer(
	SusiId_t Id,		
	uint32_t Addr,		
	uint32_t Cmd,		
	uint8_t *pBuffer,	
	uint32_t ReadLen	
    );
SusiStatus_t SUSI_API SusiI2CWriteTransfer(
	SusiId_t Id,		
	uint32_t Addr,		
	uint32_t Cmd,		
	uint8_t *pBuffer,	 
	uint32_t ByteCnt	
    );
SusiStatus_t SUSI_API SusiI2CProbeDevice(
	SusiId_t Id,		
	uint32_t Addr		
    );
SusiStatus_t SUSI_API SusiI2CGetFrequency(
	SusiId_t Id,		
	uint32_t *pFreq		
	);
SusiStatus_t SUSI_API SusiI2CSetFrequency(
	SusiId_t Id,		
	uint32_t Freq		
	);
#define SUSI_ID_I2C_MAXIMUM_BLOCK_LENGTH	0x00000000
SusiStatus_t SUSI_API SusiI2CGetCaps(
	SusiId_t Id,		
	uint32_t ItemId,	
	uint32_t *pValue	
	);
#define SUSI_ID_GPIO(GPIO_NUM)				((SusiId_t)(SUSI_ID_GPIO_BASE + GPIO_NUM))
#define SUSI_ID_GPIO_BANK(BANK_NUM)			((SusiId_t)(SUSI_ID_GPIO_BANK_BASE + BANK_NUM))
#define SUSI_ID_GPIO_PIN_BANK(GPIO_NUM)		((SusiId_t)(SUSI_ID_GPIO_BANK_BASE | ((GPIO_NUM) >> 5)))
#define SUSI_GPIO_LOW     0
#define SUSI_GPIO_HIGH    1
#define SUSI_GPIO_INPUT   1
#define SUSI_GPIO_OUTPUT  0
#define SUSI_ID_GPIO_INPUT_SUPPORT			0x00000000
#define SUSI_ID_GPIO_OUTPUT_SUPPORT			0x00000001
SusiStatus_t SUSI_API SusiGPIOGetCaps(
	SusiId_t Id,		
	uint32_t ItemId,	
	uint32_t *pValue	
	);
SusiStatus_t SUSI_API SusiGPIOGetDirection(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t *pDirection	
    );
SusiStatus_t SUSI_API SusiGPIOSetDirection(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t Direction		
    );
SusiStatus_t SUSI_API SusiGPIOGetLevel(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t *pLevel		
    );
SusiStatus_t SUSI_API SusiGPIOSetLevel(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t Level			
    );
SusiStatus_t SUSI_API SusiGPIOIntGetEdge(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t *pEdge);		
SusiStatus_t SUSI_API SusiGPIOIntSetEdge(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t edge);			
SusiStatus_t SUSI_API SusiGPIOIntGetPin(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t *pPin);		
SusiStatus_t SUSI_API SusiGPIOIntSetPin(
	SusiId_t Id,			
	uint32_t Bitmask,		
	uint32_t pin);			
typedef void (SUSI_API *SUSI_INT_CALLBACK)(void*);
SusiStatus_t SUSI_API SusiGPIOIntRegister(
	SUSI_INT_CALLBACK pfnCallback);   
SusiStatus_t SUSI_API SusiGPIOIntUnRegister(void);
#define SUSI_ID_BACKLIGHT_MAX			4
#define SUSI_ID_BACKLIGHT_1				((SusiId_t)0)
#define SUSI_ID_BACKLIGHT_2				((SusiId_t)1)
#define SUSI_ID_BACKLIGHT_3				((SusiId_t)2)
#define SUSI_BACKLIGHT_SET_ON			1
#define SUSI_BACKLIGHT_SET_OFF			0
SusiStatus_t SUSI_API SusiVgaGetBacklightEnable( 
	SusiId_t Id,		
	uint32_t *pEnable	
    );
SusiStatus_t SUSI_API SusiVgaSetBacklightEnable(
	SusiId_t Id,		
	uint32_t Enable		
    );
SusiStatus_t SUSI_API SusiVgaGetBacklightBrightness( 
	SusiId_t Id,		
	uint32_t *pBright   
    );
SusiStatus_t SUSI_API SusiVgaSetBacklightBrightness(
	SusiId_t Id,		
	uint32_t Bright		
    );
#define SUSI_BACKLIGHT_LEVEL_MAXIMUM			9
#define SUSI_BACKLIGHT_LEVEL_MINIMUM			0
SusiStatus_t SUSI_API SusiVgaGetBacklightLevel(
	SusiId_t Id,
	uint32_t *pLevel
	);
SusiStatus_t SUSI_API SusiVgaSetBacklightLevel(
	SusiId_t Id,
	uint32_t Level
	);
#define SUSI_BACKLIGHT_POLARITY_ON		1
#define SUSI_BACKLIGHT_POLARITY_OFF		0
SusiStatus_t SUSI_API SusiVgaGetPolarity( 
	SusiId_t Id,		
	uint32_t *pPolarity	
	);
SusiStatus_t SUSI_API SusiVgaSetPolarity( 
	SusiId_t Id,		
	uint32_t Polarity	
	);
SusiStatus_t SUSI_API SusiVgaGetFrequency( 
	SusiId_t Id,			
	uint32_t *pFrequency	
	);
SusiStatus_t SUSI_API SusiVgaSetFrequency( 
	SusiId_t Id,			
	uint32_t Frequency		
	);
#define SUSI_ID_VGA_BRIGHTNESS_MAXIMUM		0x00010000
#define SUSI_ID_VGA_BRIGHTNESS_MINIMUM		0x00010001
SusiStatus_t SUSI_API SusiVgaGetCaps( 
	SusiId_t Id,		
	uint32_t ItemId,	
	uint32_t *pValue	
	);
#define SUSI_ID_STORAGE_MAX				12