SampleCode/SUSIDemo_C#/SusiCommon/Susi4.cs


        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardWriteIO(UInt16 Port, UInt32 Value, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardReadPCI(byte Bus, byte Device, byte Function, UInt32 Offset, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 5)] byte[] pData, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardWritePCI(byte Bus, byte Device, byte Function, UInt32 Offset, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 5)] byte[] pData, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardReadMemory(UInt32 Address, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] byte[] pData, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardWriteMemory(UInt32 Address, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] byte[] pData, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardReadMSR(UInt32 index, ref UInt32 EAX, ref UInt32 EDX);

        [DllImport("Susi4")]
        public static extern UInt32 SusiBoardWriteMSR(UInt32 index, UInt32 EAX, UInt32 EDX);
    }

    public static class SusiSMB
    {
        public const UInt32 SUSI_SMBUS_MAX_DEVICE = 5;

        public const UInt32 SUSI_ID_SMBUS_EXTERNAL = 0x00000000;
        public const UInt32 SUSI_ID_SMBUS_OEM0 = 0x00000001;
        public const UInt32 SUSI_ID_SMBUS_OEM1 = 0x00000002;
        public const UInt32 SUSI_ID_SMBUS_OEM2 = 0x00000003;
        public const UInt32 SUSI_ID_SMBUS_OEM3 = 0x00000004;

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBReadByte(UInt32 Id, byte Addr, byte Cmd, out byte pBuffer);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBWriteByte(UInt32 Id, byte Addr, byte Cmd, byte Data);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBReadWord(UInt32 Id, byte Addr, byte Cmd, out UInt16 pBuffer);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBWriteWord(UInt32 Id, byte Addr, byte Cmd, UInt16 Data);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBReceiveByte(UInt32 Id, byte Addr, out byte pBuffer);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBSendByte(UInt32 Id, byte Addr, byte Data);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBReadQuick(UInt32 Id, byte Addr);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBWriteQuick(UInt32 Id, byte Addr);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBReadBlock(UInt32 Id, byte Addr, byte Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, ref UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBWriteBlock(UInt32 Id, byte Addr, byte Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBI2CReadBlock(UInt32 Id, byte Addr, byte Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, UInt32 Length);

        [DllImport("Susi4")]
        public static extern UInt32 SusiSMBI2CWriteBlock(UInt32 Id, byte Addr, byte Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, UInt32 Length);
    }

    public static class SusiI2C
    {
        public const UInt32 SUSI_I2C_MAX_DEVICE = 7;

        public const UInt32 SUSI_ID_I2C_EXTERNAL = 0x00000000;
        public const UInt32 SUSI_ID_I2C_OEM0 = 0x00000001;
        public const UInt32 SUSI_ID_I2C_OEM1 = 0x00000002;
        public const UInt32 SUSI_ID_I2C_OEM2 = 0x00000003;
        public const UInt32 SUSI_ID_I2C_OEM3 = 0x00000004;


        public static UInt32 SUSI_I2C_ENC_7BIT_ADDR(UInt32 addr)
        {
            return (addr << 1);
        }

        public static UInt32 SUSI_I2C_DEC_7BIT_ADDR(UInt32 addr)
        {
            return (addr >> 1);
        }

        public static UInt32 SUSI_I2C_ENC_10BIT_ADDR(UInt32 addr)
        {
            return ((addr & 0x00FF) | ((addr & 0x0300) << 1) | 0xF000);
        }

        public static UInt32 SUSI_I2C_DEC_10BIT_ADDR(UInt32 addr)
        {
            return ((addr & 0x00FF) | ((addr >> 1) & 0x0300));
        }

        public static bool SUSI_I2C_IS_10BIT_ADDR(UInt32 addr)
        {
            return ((addr & 0xF800) == 0xF000);
        }

        public static bool SUSI_I2C_IS_7BIT_ADDR(UInt32 addr)
        {
            return !SUSI_I2C_IS_10BIT_ADDR(addr);
        }

        // Bits 31 & 30 Selects Command Type
        public const UInt32 SUSI_I2C_STD_CMD = (0 << 30);
        public const UInt32 SUSI_I2C_EXT_CMD = ((UInt32)2 << 30);
        public const UInt32 SUSI_I2C_NO_CMD = ((UInt32)1 << 30);
        public const UInt32 SUSI_I2C_CMD_TYPE_MASK = ((UInt32)3 << 30);

        public static UInt32 SUSI_I2C_ENC_STD_CMD(UInt32 cmd)
        {
            return ((cmd & 0xFF) | SUSI_I2C_STD_CMD);
        }

        public static UInt32 SUSI_I2C_ENC_EXT_CMD(UInt32 cmd)
        {
            return ((cmd & 0xFFFF) | SUSI_I2C_EXT_CMD);
        }

        public static UInt32 SUSI_I2C_ENC_NO_CMD(UInt32 cmd)
        {
            return ((cmd & 0xFFFF) | SUSI_I2C_NO_CMD);
        }

        public static bool SUSI_I2C_IS_EXT_CMD(UInt32 cmd)
        {
            return ((cmd & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_EXT_CMD);
        }

        public static bool SUSI_I2C_IS_STD_CMD(UInt32 cmd)
        {
            return ((cmd & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_STD_CMD);
        }

        public static bool SUSI_I2C_IS_NO_CMD(UInt32 cmd)
        {
            return ((cmd & SUSI_I2C_CMD_TYPE_MASK) == SUSI_I2C_NO_CMD);
        }

        // Item ID
        public const UInt32 SUSI_ID_I2C_MAXIMUM_BLOCK_LENGTH = 0x00000000;
        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CWriteReadCombine(UInt32 Id, byte Addr, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)] byte[] pWBuffer, UInt32 WriteLen, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 5)] byte[] pRBuffer, UInt32 ReadLen);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CReadTransfer(UInt32 Id, UInt32 Addr, UInt32 Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, UInt32 ReadLen);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CWriteTransfer(UInt32 Id, UInt32 Addr, UInt32 Cmd, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 4)] byte[] pBuffer, UInt32 ByteCnt);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CProbeDevice(UInt32 Id, UInt32 Addr);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CGetFrequency(UInt32 Id, out UInt32 pFreq);

        [DllImport("Susi4")]
        public static extern UInt32 SusiI2CSetFrequency(UInt32 Id, UInt32 Freq);
    }

    public static class SusiGPIO
    {
        public static UInt32 SUSI_ID_GPIO(UInt32 Num)
        {
            return Num;
        }

        public static UInt32 SUSI_ID_GPIO_BANK(UInt32 BankNum)
        {
            return BankNum + 0x00010000;
        }

        public static UInt32 SUSI_ID_GPIO_PIN_BANK(UInt32 GPIO_NUM)
        {
            return (0x00010000 | ((GPIO_NUM) >> 5));
        }

        // Item ID
        public const UInt32 SUSI_ID_GPIO_INPUT_SUPPORT = 0;
        public const UInt32 SUSI_ID_GPIO_OUTPUT_SUPPORT = 1;
        public const UInt32 SUSI_ID_GPIO_INT_SUPPORT = 2;

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);

        public const UInt32 SUSI_GPIO_OUTPUT = 0;
        public const UInt32 SUSI_GPIO_INPUT = 1;
        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOGetDirection(UInt32 Id, UInt32 Bitmask, out UInt32 pDirection);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOSetDirection(UInt32 Id, UInt32 Bitmask, UInt32 Direction);

        public const UInt32 SUSI_GPIO_LOW = 0;
        public const UInt32 SUSI_GPIO_HIGH = 1;
        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOGetLevel(UInt32 Id, UInt32 Bitmask, out UInt32 pLevel);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOSetLevel(UInt32 Id, UInt32 Bitmask, UInt32 Level);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntGetPin(UInt32 Id, UInt32 Bitmask, out UInt32 Enable);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntSetPin(UInt32 Id, UInt32 Bitmask, UInt32 Enable);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntGetEdge(UInt32 Id, UInt32 Bitmask, out UInt32 Edge);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntSetEdge(UInt32 Id, UInt32 Bitmask, UInt32 Edge);

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void SUSI_GPIO_INT_CALLBACK(IntPtr context);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntRegister(IntPtr pfnCallback);

        [DllImport("Susi4")]
        public static extern UInt32 SusiGPIOIntUnRegister();
    }

    public static class SusiVga
    {
        public const UInt32 SUSI_ID_BACKLIGHT_MAX = 3;

        public const UInt32 SUSI_ID_BACKLIGHT_1 = 0x00000000;
        public const UInt32 SUSI_ID_BACKLIGHT_2 = 0x00000001;
        public const UInt32 SUSI_ID_BACKLIGHT_3 = 0x00000002;

        // Item ID
        public const UInt32 SUSI_ID_VGA_BRIGHTNESS_MAXIMUM = 0x00010000;
        public const UInt32 SUSI_ID_VGA_BRIGHTNESS_MINIMUM = 0x00010001;
        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);

        public const UInt32 SUSI_BACKLIGHT_SET_OFF = 0;
        public const UInt32 SUSI_BACKLIGHT_SET_ON = 1;
        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetBacklightEnable(UInt32 Id, out UInt32 pEnable);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetBacklightEnable(UInt32 Id, UInt32 Enable);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetBacklightBrightness(UInt32 Id, out UInt32 pBright);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetBacklightBrightness(UInt32 Id, UInt32 Bright);

        public const UInt32 SUSI_BACKLIGHT_LEVEL_MAXIMUM = 9;
        public const UInt32 SUSI_BACKLIGHT_LEVEL_MINIMUM = 0;
        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetBacklightLevel(UInt32 Id, out UInt32 pLevel);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetBacklightLevel(UInt32 Id, UInt32 Level);

        public const UInt32 SUSI_SCREEN_ON = 1;
        public const UInt32 SUSI_SCREEN_OFF = 0;
        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetScreenEnable(UInt32 Id, out UInt32 pEnable);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetScreenEnable(UInt32 Id, UInt32 Enable);

        public const UInt32 SUSI_BACKLIGHT_POLARITY_ON = 1;
        public const UInt32 SUSI_BACKLIGHT_POLARITY_OFF = 0;
        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetPolarity(UInt32 Id, out UInt32 pPolarity);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetPolarity(UInt32 Id, UInt32 Polarity);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaGetFrequency(UInt32 Id, out UInt32 pFrequency);

        [DllImport("Susi4")]
        public static extern UInt32 SusiVgaSetFrequency(UInt32 Id, UInt32 Frequency);
    }

    public static class SusiStorage
    {
        public const UInt32 SUSI_ID_STORAGE_MAX = 3;
